Added Plan in Readme